# mesh-test

./: .gitignore  CLAUDE.md  README.md  SPEC.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
.lh/: vite.config.js.json
.lh/docs/: pose-driver.md.json
docs/: pose-driver.md
public/: bipeds-manifest.json
scripts/: analyze-pose.mjs  check-models.mjs  face-expr-smoke.mjs  optimize-bipeds.mjs  prepare-bipeds.mjs
sidecar/: cam_test.py  pose_sidecar.py  pyproject.toml  smoke_test.py
src/: asset-url.js  bone-source.js  choreography.js  main.js  styles.css
src/editor/: EditorUI.jsx  editor-store.js  editor.css  keymap.js  mount.jsx
src/editor/components/: BrushPanel.jsx  Header.jsx  MarkerPanel.jsx  RegionList.jsx  TestDrivePanel.jsx  ToolPanel.jsx  ViewPanel.jsx  primitives.jsx
src/face/: deform.js  editor.js  face-runtime.js  types.js
src/pose/: decode.js  detector.js  ep-bench.js  ep-probe.js  ep.js  face-expression.js  face-mask.js  face-mask.test.js  mediapipe-adapter.js  mediapipe-provider.js  native-capture-provider.js  observation-adapter.js  one-euro.js  ort-session.js  overlay-2d.js  pose-worker.js  recorder.js  retargeter.js  rig-map.js  rtmw-constants.js  rtmw-provider.js  sidecar-pose-provider.js  sidecar-ws-worker.js  skeleton-3d.js  topology.js  webcam.js  worker-pose-provider.js
test/: bone-source.test.js  choreography.test.js  mediapipe-adapter.test.js  pose-adapter.test.js  pose-decode.test.js  pose-ep.test.js  pose-one-euro.test.js  pose-recorder.test.js  pose-retargeter.test.js  pose-rig-map.test.js
