[project]
name = "pose-sidecar"
version = "0.1.0"
description = "Native ORT (TensorRT/CUDA/CoreML/CPU) pose inference sidecar for the WebGPU VJ layer"
requires-python = ">=3.10,<3.13"  # onnxruntime/opencv wheels; uv auto-fetches a managed 3.12 if needed
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "websockets>=12",
    # GPU box (Linux/Windows): onnxruntime-gpu with the `[cuda,cudnn]` EXTRA — ORT
    # declares + pulls its OWN matching CUDA + cuDNN nvidia wheels into the venv (no
    # global install, no guessing package names). Pinned to the CUDA-12 line (the
    # OFFICIALLY tested config: CUDA 12.x + cuDNN 9, default on PyPI since 1.19) —
    # the cu13 builds (>=1.23) have broken/inconsistent nvidia pip packaging.
    # ⇒ plain `npm run sidecar` gives the CUDA EP on the GPU box. `sidecar:cuda` adds
    #   TensorRT on top (the `trt` extra). preload_dlls() loads them from site-packages.
    "onnxruntime-gpu[cuda,cudnn]>=1.20,<1.23 ; platform_system != 'Darwin'",
    # Mac dev box: plain onnxruntime (CPU/CoreML) for protocol work.
    "onnxruntime>=1.18 ; platform_system == 'Darwin'",
]

[project.optional-dependencies]
# TensorRT EP on top of the CUDA base. onnxruntime-gpu 1.22 needs TensorRT **10**
# (it loads nvinfer_10.dll) — pin to 10.x or pip resolves a bindings-only stub that
# lacks the libs. `tensorrt-cu12-libs` carries the actual nvinfer_10.dll.
# NOTE: CUDA EP (the BASE install) already gives full GPU (~10-15ms on a 4090). TRT
# is an optional further speedup and the finickiest piece — if it won't resolve,
# just use `npm run sidecar` (CUDA). Enable TRT with `npm run sidecar:cuda`.
trt = [
    "tensorrt-cu12>=10,<11 ; platform_system != 'Darwin'",
    "tensorrt-cu12-libs>=10,<11 ; platform_system != 'Darwin'",
]

# Managed entirely by uv — `uv run` creates/locks .venv/ here, never touches global.
#   cd sidecar && uv run python pose_sidecar.py          (or: npm run sidecar)
[tool.uv]
package = false
# TensorRT wheels live on NVIDIA's index, not plain PyPI.
extra-index-url = ["https://pypi.nvidia.com"]
