[project]
name = "pose-sidecar"
version = "0.1.0"
description = "Native ORT (TensorRT/CUDA/CoreML/CPU) pose inference sidecar for the WebGPU VJ layer"
requires-python = ">=3.10,<3.13"  # onnxruntime/opencv wheels; uv auto-fetches a managed 3.12 if needed
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "websockets>=12",
    # Windows: real camera NAMES via DirectShow — the ONLY reliable way to see + open
    # virtual cams (OBS Virtual Camera), which OpenCV's index-only enumeration misses.
    # Same device roster the browser sees. Tiny, Windows-only.
    "pygrabber>=0.2 ; platform_system == 'Windows'",
    # GPU box (Linux/Windows). EXACT verified matrix (onnxruntime TensorRT-EP docs):
    #   onnxruntime-gpu 1.22  →  CUDA 12.x  +  cuDNN 9.x  +  TensorRT 10.9
    # The `[cuda,cudnn]` extra makes ORT pull its OWN matching CUDA 12 + cuDNN 9
    # wheels into the venv (proven: the user's log loads cublas/cudnn fine). Pinned
    # to 1.22 specifically so the TensorRT version (10.9, in the `trt` extra) matches
    # — 1.20→TRT10.4, 1.21→TRT10.8, 1.22→TRT10.9. (1.23+ switched to CUDA-13 whose
    # nvidia pip packaging is broken — avoid.)
    # ⇒ `npm run sidecar` = CUDA EP on the GPU box. `sidecar:cuda` adds TensorRT.
    "onnxruntime-gpu[cuda,cudnn]==1.22.* ; platform_system != 'Darwin'",
    # Mac dev box: plain onnxruntime (CPU/CoreML) for protocol work.
    "onnxruntime>=1.18 ; platform_system == 'Darwin'",
]

# TensorRT EP is NOT a pyproject dependency on purpose: `tensorrt-cu12` ships as an
# sdist that REFUSES to build on macOS ("only Linux/Windows"), so putting it here
# breaks uv's universal lock on the Mac dev box even when markered out. Instead the
# `sidecar:cuda` npm script injects it at run time with `uv run --with` (resolved
# for the CURRENT platform only — Windows/Linux gets the wheel, Mac never runs it):
#   uv run --with tensorrt-cu12==10.9.0.34
# onnxruntime-gpu 1.22 links onnx-tensorrt 10.9-GA → TensorRT 10.9 (nvinfer_10.dll).
# 10.9.0.34 pulls tensorrt-cu12-libs (the actual DLLs); preload_dlls() loads them.

# Managed entirely by uv — `uv run` creates/locks .venv/ here, never touches global.
#   cd sidecar && uv run python pose_sidecar.py          (or: npm run sidecar)
[tool.uv]
package = false
# TensorRT wheels live on NVIDIA's index, not plain PyPI.
extra-index-url = ["https://pypi.nvidia.com"]
